--- a/public/register.html
+++ b/public/register.html
@@ -1,7 +1,3 @@
-<?php
-include "..src/config/php/conection.php";
-?>
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -18,7 +14,7 @@ include "..src/config/php/conection.php";
 
     <main>
         <section>
-            <form action="" method="POST">
+            <form action="../src/config/php/insert.php" method="POST">
                 <div>
                     <label for="nameClient">Nome: </label>
                     <input type="text" name="nameClient" id="">
